ui: fix modal overlapping
* INSPIR-3334

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -195,6 +195,7 @@ body {
 
 .ant-modal-wrap {
   padding-top: $layout-header-height;
+  z-index: $zindex-header + 1 !important;
 }
 
 .ant-form-item-label {
